--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/buenviajex/Liri-Node-App#readme",
   "dependencies": {
     "dotenv": "^6.0.0",
-    "node-spotify-api": "^1.0.7"
+    "node-spotify-api": "^1.0.7",
+    "omdb": "^0.8.0",
+    "request": "^2.87.0",
+    "twitter": "^1.7.1"
   }
 }
